# TwinWeaver

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: citation.md  contributing.md  dataset-format.md  framework.md  index.md  installation.md  quickstart.md  tutorials.md
docs/examples/: 01_data_preparation_for_training.ipynb  02_inference_prompt_preparation.ipynb  03_end_to_end_llm_finetuning.ipynb
docs/examples/advanced/custom_splitting/: training_custom_split_events.ipynb  training_individual_splitters.ipynb
docs/examples/integrations/: meds_data_import.ipynb
docs/javascript/: toc-emoji-remover.js
docs/stylesheets/: extra.css
examples/: 01_data_preparation_for_training.ipynb  03_end_to_end_llm_finetuning.ipynb
examples/advanced/custom_output/: custom_summarized_row.ipynb
twinweaver/utils/: meds_importer.py
