[tool.ruff]
line-length = 120  # Adjust to your preference (e.g., 88, 100, 120)

[tool.ruff.lint]
# specific rules to enable
# E501 triggers "Line too long" errors for comments/strings that can't be auto-formatted
extend-select = ["E501"]


[build-system]
# Specifies the build tools needed to create the package.
# Setuptools is a common and robust choice.
requires = ["setuptools>=61.0"] # Minimum version of setuptools required
build-backend = "setuptools.build_meta" # Standard entry point for setuptools builds

[project]
name = "twinweaver"
version = "0.1.6"
description = "Converting longitudinal patient data into text for LLM-based event prediction and forecasting."

# --- NEW/UPDATED FIELDS ---

# 1. Readme: This content will become the description on the PyPI page.
readme = "README.md"

# 2. Python Version: Specify which Python versions you support.
requires-python = ">=3.8"

# 3. License: Point to your license file (e.g., Apache 2.0).
license = {file = "LICENSE"}

# 4. Authors: Your contact info.
authors = [
  {name = "MendenLab", email = "nikita.makarov@roche.com"},
]

# 5. Classifiers: These tags help people search for your package on PyPI.
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# dependencies
dependencies = [
    "numpy",
    "pandas",
    "transformers",
    "scikit-learn",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "numpy",
    "pandas",
    "transformers",
    "scikit-learn",
    "ruff",
    "jupyter",
]

# This enables: pip install twinweaver[fine-tuning-example]
fine-tuning-example = [
    "torch==2.9.1",
    "ipykernel==7.1.0",
    "transformers==4.57.6",
    "datasets==4.5.0",
    "peft==0.18.1",
    "trl==0.27.0",
    "bitsandbytes==0.49.1",
    "accelerate==1.12.0",
]

# 6. URLs: Links that appear on the PyPI sidebar.
[project.urls]
"Homepage" = "https://github.com/MendenLab/TwinWeaver"
"Bug Tracker" = "https://github.com/MendenLab/TwinWeaver/issues"

# ... keep the build-system, tool.ruff, tool.setuptools, and tool.pytest sections ...


[tool.setuptools]
packages = { find = { where = ["."], include = ["twinweaver*"] } }

# Add this new section for Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
